--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="container-fluid expanded-panel">
 		<div class="row">
 			<div id="logo" class="col-xs-12 col-sm-2">
-				<a href="index.html">DevOOPS</a>
+				<a href="index.html">Crazy Leroy's Music</a>
 			</div>
 			<div id="top-panel" class="col-xs-12 col-sm-10">
 				<div class="row">
