--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="row">
 			<div id="logo" class="col-xs-12 col-sm-2">
 				<a href="index.html">Crazy Leroy's Music</a>
-				<img class="imagebox" src="cllogo_medium.png">
+				<img class="imagebox" src="img/cllogo_medium.png">
 			</div>
 			<div id="top-panel" class="col-xs-12 col-sm-10">
 				<div class="row">
