--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-pencil-square-o"></i>
-						 <span class="hidden-xs">Forms</span>
+						 <span class="hidden-xs">Account Information</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/forms_elements.html">Elements</a></li>
@@ -190,7 +190,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle">
 						<i class="fa fa-desktop"></i>
-						 <span class="hidden-xs">UI Elements</span>
+						 <span class="hidden-xs">Most Played Songs</span>
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="ajax/ui_grid.html">Grid</a></li>
