--- a/index.html
+++ b/index.html
@@ -75,40 +75,73 @@
 </header>
 <!--End Header-->
 <!--Start Middle-->
-<div id="main" class="container">
+<div id="main" class="container-fluid">
 
-    <div class="container">
-        <!--Start Content-->
-        <div class="container-fluid">
-            <div id="left-column" class="col-xs-4">
-                <div class="well bs-component">
-                    <!--<legend>LEFT COLUMN</legend>-->
-                    <h1>Left Column</h1>
 
-                    <div class="form-horizontal" action="" method="POST"></div>
+    <!--Start Content-->
+    <div class="row">
+        <div id="left-column" class="col-sm-4">
+            <div class="well bs-component">
+                <!--<legend>LEFT COLUMN</legend>-->
+                <h1>Left Column</h1>
 
-                    <div class="well-1 bs-component">
-                        <p align="center">
-                            1------------------------------------------------------------------------------------------1</p>
-                    </div>
-                </div>
-            </div>
-            <div id="right-column" class="col-xs-8">
-                <div class="well bs-component">
-                    <!--<legend>RIGHT COLUMN</legend>-->
-                    <h1>Right Column</h1>
+                <div class="form-horizontal" action="" method="POST"></div>
 
-                    <div class="form-horizontal" action="" method="POST"></div>
-                    <!--Start well-1-->
-                    <!--Write php to create a well-1 component around each list entry -->
-                    <div class="well-1 bs-component">
-                        <p align="center">
-                            2--------------------------------------------------------------------------------------------------------------------------------------------------------------2 </p>
-                    </div>
-                    <!--End well-1-->
+                <div class="well-1 bs-component">
+                    <p align="center">
+                        1------------------------------------------------------------------------------------------1</p>
                 </div>
             </div>
         </div>
+
+        <div id="right-column" class="col-sm-8">
+            <div class="well bs-component">
+                <!--<legend>RIGHT COLUMN</legend>-->
+                <h1>Right Column</h1>
+
+                <div class="form-horizontal" action="" method="POST"></div>
+                <!--Start well-1-->
+                <!--Write php to create a well-1 component around each list entry -->
+
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+
+                        <th>Artist</th>
+
+                        <th>???</th>
+
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <?php
+                    ?>
+                    </tbody>
+                </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <div class="well-1 bs-component">
+                    <p align="center">
+                        2--------------------------------------------------------------------------------------------------------------------------------------------------------------2 </p>
+                </div>
+                <!--End well-1-->
+            </div>
+        </div>
+
     </div>
 
 
