--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
 </head>
 <body>
 <!--Start Header-->
-<header class="navbar">
+<header class="navbar-collapse">
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row">
             <div id="logo" class="col-xs-2 col-sm-2">
-                <img src="img/cllogo_medium.png" class="img-rounded"/>
+                <img src="img/cllogo_medium.png" class="img-responsive"/>
             </div>
-            <ul>
-                <br><br>
-            </ul>
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle account" data-toggle="dropdown">
