--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row">
             <div id="logo" class="col-xs-2 col-sm-2">
-                <img src="img/cllogo_medium.png" class="img-responsive"/>
+                <img src="img/cllogo.png" class="img-responsive"/>
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="dropdown">
@@ -86,7 +86,7 @@
 
                 <div class="well-1 bs-component">
                     <p align="center">
-                        1------------------------------------------------------------------------------------------1</p>
+                        1-----------------------------------------------------1</p>
                 </div>
             </div>
         </div>
@@ -97,9 +97,8 @@
                 <h1>Right Column</h1>
 
                 <div class="form-horizontal" action="" method="POST"></div>
-                <!--Start well-1-->
-                <!--Write php to create a well-1 component around each list entry -->
 
+                <div class="well-1 bs-component">
                 <table class="table">
                     <thead>
                     <tr>
@@ -113,40 +112,20 @@
                     </tr>
                     </thead>
                     <tbody>
+                    <!--Start well-1-->
+
                     <?php
                     ?>
                     </tbody>
                 </table>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-                <div class="well-1 bs-component">
-                    <p align="center">
-                        2--------------------------------------------------------------------------------------------------------------------------------------------------------------2 </p>
-                </div>
                 <!--End well-1-->
             </div>
         </div>
 
     </div>
+    <!--End Content-->
 
-
-</div>
-
-
-<!--End Content-->
-</div>
 </div>
 <!--End Middle-->
 
