--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row">
             <div id="logo" class="col-xs-2 col-sm-2">
-                <img src="img/cllogo.png" class="img-responsive"/>
+                <img src="img/cllogo.png" class="img-responsive" />
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="dropdown">
@@ -102,13 +102,13 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>Title</th>
+                        <td><b>Title</b></td>
 
-                        <th>Artist</th>
+                        <td><b>Artist</b></td>
 
-                        <th>???</th>
+                        <td><b>???</b></td>
 
-                        <th>Actions</th>
+                        <td><b>Actions</b></td>
                     </tr>
                     </thead>
                     <tbody>
