--- a/index.html
+++ b/index.html
@@ -30,38 +30,11 @@
                 <img src="img/cllogo.png" class="img-responsive" />
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle account" data-toggle="dropdown">
-                        <div class="avatar">
-                            <img src="img/avatar.jpg" class="img-rounded" alt="avatar"/>
-                        </div>
-                        <i class="fa fa-angle-down pull-right"></i>
-
-                        <div class="user-mini pull-right">
-                            <span class="welcome">Welcome,</span>
-                            <span>php to get name</span>
-                        </div>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-user"></i>
-                                <span>php to load Profile page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="ajax/gallery_simple.html" class="ajax-link">
-                                <i class="fa fa-picture-o"></i>
-                                <span>php to load Mix Tape page</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-power-off"></i>
-                                <span>php to Logout</span>
-                            </a>
-                        </li>
-                    </ul>
+                <li class="btn-label-right">
+                    Login
+                </li>
+                <li class="btn-label-right">
+                    Register
                 </li>
             </ul>
 
@@ -85,8 +58,9 @@
                 <div class="form-horizontal" action="" method="POST"></div>
 
                 <div class="well-1 bs-component">
-                    <p align="center">
-                        1-----------------------------------------------------1</p>
+                    <!-- to autoplay in the src="//www.youtube.com/embed/...?autoplay" the ... is the link #= ... and this is the number we need to get and fill from YouTube -->
+                    <iframe width="350" height="280" src="//www.youtube.com/embed/WUdIKdRuYc4?autoplay=1" frameborder="0" allowfullscreen></iframe>
+
                 </div>
             </div>
         </div>
