--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                 <div class="form-horizontal" action="" method="POST"></div>
 
                 <div class="well-1 bs-component">
+                    <div class="video-container">
                     <!-- to autoplay in the src="//www.youtube.com/embed/...?autoplay" the ... is the link #= ... and this is the number we need to get and fill from YouTube -->
                     <iframe width="350" height="280" src="//www.youtube.com/embed/WUdIKdRuYc4?autoplay=1" frameborder="0" allowfullscreen></iframe>
-
+                    </div>
                 </div>
             </div>
         </div>
