--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <img src="img/cllogo.png" class="img-responsive" />
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
-                <li class="btn-label-right">
-                    Login
+                <li class="btn-label-right" >
+                    <a href="login.php">Login</a>
                 </li>
                 <li class="btn-label-right">
                     Register
