--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="login.php">Login</a>
                 </li>
                 <li class="btn-label-right">
-                    Register
+                    <a href="register.php">Register</a>
                 </li>
             </ul>
 
