--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!--<legend>LEFT COLUMN</legend>-->
                 <h1>Left Column</h1>
 
-                <div class="form-horizontal" action="" method="POST"></div>
+<!--                <div class="form-horizontal" action="left" method="POST"></div>-->
 
                 <div class="well-1 bs-component">
                     <div class="video-container">
@@ -71,7 +71,7 @@
                 <!--<legend>RIGHT COLUMN</legend>-->
                 <h1>Right Column</h1>
 
-                <div class="form-horizontal" action="" method="POST"></div>
+<!--                <div class="form-horizontal" action="right" method="POST"></div>-->
 
                 <div class="well-1 bs-component">
                 <table class="table">
