--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <header class="navbar-collapse">
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row" a>
-            <div id="logo" class="col-xs-2 col-sm-2">
+            <div nav navbar-nav pull-left panel-menu>
                 <img src="img/cllogo.png" class="img-responsive" min-height="50px"/>
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
@@ -60,7 +60,7 @@
                 <div class="well-1 bs-component">
                     <div class="video-container">
                     <!-- to autoplay in the src="//www.youtube.com/embed/...?autoplay" the ... is the link #= ... and this is the number we need to get and fill from YouTube -->
-                    <iframe width="350" height="280" src="//www.youtube.com/embed/WUdIKdRuYc4?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                    <!--<iframe width="350" height="280" src="//www.youtube.com/embed/WUdIKdRuYc4?autoplay=1" frameborder="0" allowfullscreen></iframe>-->
                     </div>
                 </div>
             </div>
