--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row" a>
             <div nav navbar-nav pull-left panel-menu>
-                <img src="img/cllogo.png" class="img-responsive" min-height="50px"/>
+                <img src="img/cllogo_small.png" class="img-responsive" min-height="50px"/>
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="btn-label-right" >
