--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <header class="navbar-collapse">
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row" a>
-            <div class="banner-item">
+            <div class="logo">
                 <img src="img/cllogo_medium.png" class="img-responsive" min-height="50px"/>
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
