--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <!--Start Header-->
 <header class="navbar-collapse">
     <div id="top-panel" class="container-fluid expanded-panel">
-        <div class="row" a>
-            <div class="logo">
-                <img src="img/cllogo_medium.png" class="img-responsive" min-height="50px"/>
+        <div class="row">
+            <div id="logo" class="col-xs-2 col-sm-2">
+                <img src="img/cllogo.png" class="img-responsive" min-height="50px"/>
             </div>
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="btn-label-right" >
