--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 <body>
 <!--Start Header-->
 <header class="navbar-collapse">
+    <div id="logo" class="col-xs-6 col-sm-6">
+        <img src="img/cllogo_medium.png" class="img-responsive" />
+    </div>
     <div id="top-panel" class="container-fluid expanded-panel">
         <div class="row">
-            <!--<div id="logo" class="col-xs-2 col-sm-2">-->
-            <a>
-                <img src="img/cllogo_medium.png" class="img-responsive" min-height="50px"/>
 
-            <!--</div>-->
             <ul class="nav navbar-nav pull-right panel-menu">
                 <li class="btn-label-right">
                     <a href="login.php">Login</a>
@@ -39,7 +38,7 @@
                     <a href="register.php">Register</a>
                 </li>
             </ul>
-            </a>
+
         </div>
 
     </div>
