--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="right-column" class="col-sm-8">
             <div class="well bs-component">
                 <!--<legend>RIGHT COLUMN</legend>-->
-                <h1>Right Column</h1>
+                <h1>Top Ten Songs</h1>
 
                 <!--                <div class="form-horizontal" action="right" method="POST"></div>-->
 
