--- a/html/header.html
+++ b/html/header.html
@@ -1,20 +1,22 @@
 <header class="navbar-collapse">
+    <div id="logo" class="col-xs-6 col-sm-6">
+        <img src="img/cllogo_medium.png" class="img-responsive"/>
+    </div>
     <div id="top-panel" class="container-fluid expanded-panel">
+        <br>
         <div class="row">
-            <div id="logo" class="col-xs-2 col-sm-2">
-                <img src="img/cllogo.png" class="img-responsive" />
-            </div>
             <ul class="nav navbar-nav pull-right panel-menu">
-                <li class="btn-label-right" >
-                    <a href="login.php">Login</a>
+                <li class="btn-label-right">
+                    <div class="well-1 btn">
+                        <a href="login.php">Login</a>
+                    </div>
                 </li>
                 <li class="btn-label-right">
-                    <a href="register.php">Register</a>
+                    <div class="well-1 btn">
+                        <a href="register.php">Register</a>
+                    </div>
                 </li>
             </ul>
-
         </div>
-
     </div>
-
 </header>
